	 compiler.
	-Changed behavior of HOSTPRE so the compiler prefix is the same and
	 also it doesn't include the PATH in case of program name conflicts.
	-Took paranoid approach to executing commands.
	-Fix to installing Glibc headers, include/bits may not be created by
	 default, so we make sure it's there.
	-Added --enable-install-libbfd to Dreamcast binutils options. It
	 installs to $INSTALL/$HOSTGCC/sh-elf/{include,lib}. Those will be
	 where you need to point dcload to. $HOSTGCC is typically be
	 something like i686-pc-linux-gnu, powerpc-unknown-linux-gnu, etc.
	-Updated NOTES to include some info about building dcload.
	-Changed !/bin/bash to just !/bin/sh.
	-Better checks for build dependencies.

Version 1.7.1:
	-Changed Dreamcast.cfg back to know good values.

Version 1.8:
	-Killed dead spaces off of Changelog.
	-Gcc downloads should now overall be smaller in most cases since it's  now
	 downloaded as gcc-core, gcc-g++, gcc-java, etc.
	-Most targets should now work with changed Gcc behavior.
	-Dreamcast now has GCC 4.5.2 (made possible by great work by BlueCrab).
	 The older 3.4.6 version can still be enabled by editing
	 options/dreamcast.cfg, but should not be needed.
	-Misc version bumps
	-Added a Gba and Arm Linux target (experimental)
	-Version bumps to SFFL
	-Updated support for uClibc (old versions will be broke)
	-Added Didj target
	-Better support for other shells besides bash compatibles
	-AVR support (experimental)
	-Glibc is unsupported in this release (it will probably be brought back as
	 eGlibc in the future (probably 1.8.1)
	-Because of above, uClibc is the default.
	-Added Neo Freerunner target which is arm9tdmi
	-Added devkitPro Gamecube/Wii ld files & rules
	-Correctly check for fortran & obj-c++ if it's a selected language
	-ChangeLog spelling fixes
	-Targets can now be easily added simply by adding them to the options
	 directory and passing the filename (minus .cfg) to buildcross.sh
	-KOS now uses cp instead of ln by default