@@ -35,12 +35,6 @@ GCCFOPTS="--with-arch=armv4 --with-newlib --disable-nls --enable-symvers=gnu --e
 # Newlib options
 NEWLIBOPTS=""
 
-# Where kos is located
-if test "$KOSLOCATION" = "";then
-	KOSLOCATION="$BASEDIR/$TARG/kos"
-	mkdir -p $KOSLOCATION
-fi
-
 # Gdb options
 GDBOPTS="--enable-sim"
 
