@@ -49,12 +49,6 @@ NEWLIBOPTS="--disable-newlib-supplied-syscalls --enable-newlib-hw-fp --enable-ne
 # Target
 TARG="$SHELF"
 
-# Where kos is located
-if test "$KOSLOCATION" = "";then
-	KOSLOCATION="$BASEDIR/$TARG/kos"
-	mkdir -p $KOSLOCATION
-fi
-
 # Gdb options
 GDBOPTS="--enable-sim"
 
