@@ -33,7 +33,4 @@ NEWLIBOPTS=""
 # Target
 TARG="i686-elf"
 
-KOSLOCATION="$BASEDIR/$TARG/kos"
-QuietExec "mkdir -p $KOSLOCATION"
-
 # End ix86 options
