@@ -39,10 +39,4 @@ NEWLIBOPTS=""
 # Gdb options
 GDBOPTS="--enable-sim"
 
-# Where kos is located
-if test "$KOSLOCATION" = "";then
-	KOSLOCATION="$BASEDIR/$TARG/kos"
-	mkdir -p $KOSLOCATION
-fi
-
 # End KOS Arm options
